UI/cass-web-ingres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-web-deployment
  labels:
    app: cassandra-web
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: cassandra-web
  template:
    metadata:
      labels:
        app: cassandra-web
    spec:
      containers:
        - name: cassandra-web
          image: delermando/docker-cassandra-web:v0.4.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-web-service
spec:
  selector:
    app: cassandra-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassandra-web-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "cassandra-dev.strategy22.com" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cassandra-web-service
                port:
                  number: 80
